crates/aiken-lang/src/tests/snapshots/format_long_bin_op_5.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\ntest foo() {\n    when x is {\n        [True, False, True, False, True, False, True, False, True, False, True, False, True, False, True, False, ..] -> todo\n        _ -> todo\n    }\n}\n"
---
test foo() {
  when x is {
    [
      True, False, True, False, True, False, True, False, True, False, True,
      False, True, False, True, False,
      ..
    ] -> todo
    _ -> todo
  }
}
