crates/aiken-lang/src/tests/snapshots/format_long_pattern_2.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\ntest foo() {\n    when x is {\n        [(1, 2, 3), (4, 5, 6), (7, 8, 9), (10, 11, 12), (13, 14, 15), (16, 17, 18), (19, 20, 21), (22, 23, 24)] -> todo\n        _ -> todo\n    }\n}\n"
---
test foo() {
  when x is {
    [
      (1, 2, 3), (4, 5, 6), (7, 8, 9), (10, 11, 12), (13, 14, 15), (16, 17, 18),
      (19, 20, 21), (22, 23, 24),
    ] -> todo
    _ -> todo
  }
}
