crates/aiken-lang/src/tests/snapshots/format_merge_imports_2.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nuse aiken/list.{bar, foo}\nuse aiken/dict\nuse aiken/list\n"
---
use aiken/dict
use aiken/list.{bar, foo}
